@@ -6,6 +6,7 @@
 	- Make wheels susceptible to bullets and explosions too.
 - UI:
 	- Fix exception when resetting colours in Team Icons.
+	- Prevent the kill timer from showing in the Loaded Vessel Switcher window for surface vessels.
 - Competition:
 	- Fix exception in auto-resuming tournaments when SpawnProbe.craft isn't found.
 	- Fix incorrect Kill Steal attribution from 1v1 fights.
